--- a/css file/dashboard.css
+++ b/css file/dashboard.css
@@ -831,24 +831,7 @@ table span.rejected{
     background-color: var(--red-color);
 }
 /* end section */
-/* start animation */
-@keyframes pending {
-    0% , 100%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 1;
-    }
-}
-@keyframes up-to-down {
-    0% , 100%{
-        bottom: 20px;
-    }
-    50%{
-        bottom: 0;
-    }
-}
-/* end animation */
+
 /*start profile page */
 @media (max-width:991px) {
     .pg .section .content .profile-card{
@@ -920,7 +903,97 @@ text-align: center;
     
 }
 /*end profile page */
+
+/* start projects page */
+.projects img{
+    transition: var(--transition-section);
+    -webkit-transition: var(--transition-section);
+    -moz-transition: var(--transition-section);
+    -ms-transition: var(--transition-section);
+    -o-transition: var(--transition-section);
+    cursor: pointer;
+}
+.projects img:hover{
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+}
+.projects img:not(:first-child)
+{
+    margin-left: -20px;
+}
+@media (max-width:767px) {
+    .projects .types{
+        flex-direction: column;
+    }
+    .section .content .projects{
+        display: grid;
+        grid-template-columns:repeat(auto-fill,minmax(200px,1fr)) ;
+    }
+}
+
+.projects .types{
+    border-top:solid 1px #ddd ;
+    border-bottom:solid 1px #ddd ;
+}
+.projects .types p:hover{
+    background-color: var(--main-color);
+    color: white;
+    transform: scaleX(1.1);
+    -webkit-transform: scaleX(1.1);
+    -moz-transform: scaleX(1.1);
+    -ms-transform: scaleX(1.1);
+    -o-transform: scaleX(1.1);
+}
+.projects .types p{
+    background-color: #eeeeee;
+    padding:10px;
+    transition: var(--transition-section);
+    -webkit-transition: var(--transition-section);
+    -moz-transition: var(--transition-section);
+    -ms-transition: var(--transition-section);
+    -o-transition: var(--transition-section);
+}
+.projects .project .footer::before{ content: ""; position: absolute; width: 35%; height: 5px; background-color: #ececee; left: 0; border-radius:10px; -webkit-border-radius:10px; -moz-border-radius:10px; -ms-border-radius:10px; -o-border-radius:10px;
+}
+.projects .project .footer::after{ 
+    content: "";
+    position: absolute; height: 5px; left: 0; border-radius: 10px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-border-radius: 10px; -o-border-radius: 10px;
+}
+.projects .project .footer.green::after{
+background-color: var(--green-color);
+width: 20%;
+}
+.projects .project .footer.red::after{
+    background-color: var(--red-color);
+    width: 10%;
+
+}
+.projects .project .footer.blue::after{
+    background-color: var(--main-color);
+width: 25%;
+}
+/* end projects page */
 /* start animation */
+@keyframes pending {
+    0% , 100%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+}
+@keyframes up-to-down {
+    0% , 100%{
+        bottom: 20px;
+    }
+    50%{
+        bottom: 0;
+    }
+    
+}
 @keyframes full {
     0%, 100%{
         width: 80%;
