--- a/css file/framework.css
+++ b/css file/framework.css
@@ -26,6 +26,9 @@ color: #22c55e;
 .red-c{
     color:#f44336 ;
 }
+.pg-red-c{
+    background-color:#f44336 ;
+}
 .active{
     background-color: #f6f6f6;
 }
